added lesson06 validation and err handler
